--- a/client/src/Components/Navbar/navbar.scss
+++ b/client/src/Components/Navbar/navbar.scss
@@ -1,12 +1,13 @@
 #navhero {
-  margin: 10px 40px 10px 40px;
+  padding: 10px 40px 0px 40px;
+  box-shadow: 0px 5px 15px rgba(152, 151, 151, 0.25);
 }
 #navtop {
   display: flex;
   justify-content: space-between;
 }
 #logo{
-  width:20px;
+  width:250px;
 }
 #navbottom {
   display: flex;
@@ -14,6 +15,7 @@
 #navtopside {
   display: flex;
   margin-top: 10px;
+  height: 25px;
 }
 #navtopside img {
   width: 23px;
@@ -31,6 +33,7 @@
   color: #052c49;
   font-weight: bold;
   text-decoration: none;
+  margin-bottom:0px;
 }
 #navtopsidecontent:hover{
   background-color: #eaebed;
@@ -43,10 +46,10 @@
 
 #navbottom a {
   margin-right: 40px;
-  margin-top: 15px;
+  // margin-top: 15px;
   font-size: 20px;
   color: #052c49;
-  padding: 5px;
+  padding: 10px 20px 10px 20px;
   text-decoration: none;
 }
 #navbottom a:hover{
@@ -60,4 +63,31 @@
 }
 #tripinputs {
   display: flex;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media(max-width:900px){
+  #navtopside{
+    display:none;
+  }
+  #navbottom{
+    display: none;
+  }
 }
