--- a/client/src/Pages/Signup/Signup.scss
+++ b/client/src/Pages/Signup/Signup.scss
@@ -10,17 +10,31 @@
     height: 100vh;
     background-size: cover;
     background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #signupform{
     background-color: white;
     padding:30px;
-    margin-left: 200px;
+    // margin-left: 200px;
+    padding-top: 50px;
+    width: 460px;
+    border-radius: 10px;
 }
+#signupform h2{
+    padding-bottom: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #042d37;
+}
+
 #forminput{
     margin-bottom: 20px;
     width: 400px;
     height: 60px;
-    border: 1px solid #0076cd;
+    border: 1px solid #042d37;
+    padding-left: 20px;
 }
 #signupsubmit{
     color: white;
