--- a/client/src/Pages/Home/Home.scss
+++ b/client/src/Pages/Home/Home.scss
@@ -52,7 +52,7 @@
 }
 #tripflight{
     margin-right: 80px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     color: #042d37;
     padding: 10px;
     display: flex;
