--- a/client/src/Components/Navbar/navbar.scss
+++ b/client/src/Components/Navbar/navbar.scss
@@ -1,3 +1,44 @@
+#navcard {
+  position: fixed;
+  left: -100vw;
+  height: 100%;
+  width: 70%;
+  z-index: 9999;
+  transition: all 0.5s ease-in-out;
+}
+
+#hamburger {
+  cursor: pointer;
+  display: none;
+}
+
+#navcard.show {
+  padding-left: 20px;
+  padding-top: 30px;
+  top: 0;
+  left: 0;
+  background-color: #052c49;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: flex-start;
+}
+
+#navcard ul {
+  display: flex;
+  justify-content: left;
+}
+
+#navcard a {
+  font-size: 1.3rem;
+  font-weight: bold;
+  color: white;
+}
+
+#close {
+  cursor: pointer;
+}
+
 #navhero {
   padding: 10px 40px 0px 40px;
   box-shadow: 0px 5px 15px rgba(152, 151, 151, 0.25);
@@ -5,6 +46,7 @@
 #navtop {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 #logo{
   width:250px;
@@ -65,6 +107,14 @@
   display: flex;
 }
 
+@media(max-width:768px){
+  #hamburger {
+    display: block;
+  }
+  #navhero{
+    
+  }
+}
 
 
 
