--- a/client/src/Pages/Signup/Signup.scss
+++ b/client/src/Pages/Signup/Signup.scss
@@ -43,3 +43,13 @@
     border-radius: 3px;
     padding:10px 20px 10px 20px;
 }
+
+@media(max-width:768px){
+    #signupform {
+        width: 80%;
+
+        #forminput{
+            width: 100%;
+        }
+    }
+}
