--- a/client/src/Components/SideBar/slidebar.scss
+++ b/client/src/Components/SideBar/slidebar.scss
@@ -1,8 +1,8 @@
- @media (min-width: 992px) {
-    .sidebar {
-      height: unset!important;
-    }
-  }
+//  @media (min-width: 992px) {
+//     .sidebar {
+//       height: unset!important;
+//     }
+//   }
   
   /* Sidebar */
   .sidebar {
@@ -14,6 +14,8 @@
     /* Height of navbar */
     box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
     width: 240px;
+    max-height: 100vh;
+    z-index: 2;
     /* z-index: 600; */
   }
   
@@ -24,6 +26,7 @@
   @media (max-width: 992px) {
     .sidebar {
       width: 100%;
+      height: 100vh;
     }
   }
   
@@ -37,6 +40,7 @@
     top: 0;
     height: calc(100vh - 48px);
     padding-top: 0.5rem;
+    width: 100%;
     overflow-x: hidden;
     overflow-y: auto;
     /* Scrollable contents if viewport is shorter than content. */
