--- a/client/src/Components/SideBar/slidebar.scss
+++ b/client/src/Components/SideBar/slidebar.scss
@@ -1,8 +1,8 @@
-//  @media (min-width: 992px) {
-//     .sidebar {
-//       height: unset!important;
-//     }
-//   }
+ @media (min-width: 992px) {
+    .sidebar {
+      height: unset!important;
+    }
+  }
   
   /* Sidebar */
   .sidebar {
@@ -14,7 +14,7 @@
     /* Height of navbar */
     box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
     width: 240px;
-    max-height: 100vh;
+    height: 100vh;
     z-index: 2;
     /* z-index: 600; */
   }
@@ -25,8 +25,13 @@
   
   @media (max-width: 992px) {
     .sidebar {
-      width: 100%;
-      height: 100vh;
+      width: 500px !important;
+      height: 100vh !important;
+    }
+    #width__media {
+      width: 200px !important;
+      height: 100vh !important;
+      
     }
   }
   
