--- a/client/src/Pages/Admin/admindashboard.scss
+++ b/client/src/Pages/Admin/admindashboard.scss
@@ -4,12 +4,13 @@
 
 
     .main__admin2{
-        width: 75%;
+    //    margin-right: 0;
         position: absolute;
+        padding: 20px;
         right: 0;
         top: 50px;
-        padding: 20px;
         z-index: -1;
+        width: 75% ;
     }
 }
 
@@ -25,6 +26,7 @@
         // left: 50%;
         // right: 50%;
         // transform: translate(-50%, -50%);
-        width: 200vw;
+        position: relative !important;
+        width: 100% !important;
     }
 }
