--- a/client/src/Pages/Home/Home.scss
+++ b/client/src/Pages/Home/Home.scss
@@ -1,3 +1,13 @@
+.loading {
+    position: absolute;
+    height: 100vh; 
+    width: 100vw; 
+    display: flex;  
+    align-items: center;
+    justify-content: center;
+}
+
+
 #tripcont{
     display: grid;
     width: 100%;
