--- a/client/src/Components/Footer/footer.scss
+++ b/client/src/Components/Footer/footer.scss
@@ -1,12 +1,12 @@
 /* Footer Section  */
-
-footer {
-    background-color: #042d37;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 50px 100px 50px 100px;
-  }
+.footer_links {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 100px;
+  background-color: #042d37;
+  align-items: center;
+  padding: 50px;
+}
   
   #btn_footer {
     width: fit-content;
@@ -15,18 +15,15 @@ footer {
     border: none;
     border-radius: 50px;
     cursor:pointer;
-    color: white;
+    background-color: white;
+    color: #042d37;
+    font-weight: bold;
   }
   
   #btn_footer:hover {
     opacity: 0.7;
   }
   
-  .footer_links {
-    display: flex;
-    justify-content: space-between;
-    gap: 100px;
-  }
   
   .footer_links ol img:hover{
     background-color: #042d37;
@@ -44,8 +41,13 @@ footer {
   .footer_links a:hover{
     color: #042d37;
   }
+
+  .link_1 {
+    display: grid;
+    gap: 20px;
+  }
   
-  .link_1 ol{
+  .link_1 ul{
     display: flex;
     gap: 20px;
   } 
@@ -58,23 +60,15 @@ footer {
   }
 
 @media(max-width:768px){
-    /* Footer Section  */
-
-  footer {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 20px;
-    text-align:center;
-  }
-
+  
   .footer_links{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
     gap: 0px;
-    text-align: center;
+    padding: 20px;
+    text-align:center;
   }
 
   #btn_footer{
@@ -83,7 +77,7 @@ footer {
   .link_4 {
     justify-content: center;
     align-items: center;
-    gap: 0px;
+    gap: 30px;
     width: 100%;
   }
 }
