--- a/client/src/Pages/Home/Home.scss
+++ b/client/src/Pages/Home/Home.scss
@@ -15,12 +15,12 @@
     display: flex;
     justify-content: space-evenly;
     align-items: baseline;
+    position: relative;
 }
 
 #tripbook{
     display: flex;
     gap: 50px;
-    position: relative;
     width: 100%;
     justify-content: space-between;
     align-items: center;
@@ -86,8 +86,8 @@
 @media(max-width:768px){
 
     #tripbook {
-        // flex-direction: column;
         top: 20px;
+        align-items: baseline;
         gap: 0;
         justify-content: space-between;
     }
