--- a/client/src/Pages/Trip/Trip.scss
+++ b/client/src/Pages/Trip/Trip.scss
@@ -1,21 +1,38 @@
 #mytriphero{
-    margin: 30px 100px 0px 300px;
+    // margin: 30px 100px 0px 300px;
+    width: 100%;
 }
 #mytriphero h1{
-    font-size: 40px;
-    padding-bottom: 10px;
+    font-size: 2rem;
     color: #042d37;
 }
+
+#tripimage {
+    width: 50%;
+}
+
+#mytriphero {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 50px;
+    
+    img {
+        object-fit: cover;
+    }
+
+}
+
 #tripmanage{
     font-size: 17px;
     padding-bottom: 10px;
     color: #042d37;
 }
 #mytripinput{
-    padding: 10px 10px 10px 50px;
     box-shadow: 0px 5px 15px rgba(152, 151, 151, 0.25);
-    margin-bottom: 10px;
-    width: 400px;
+    width: 100%;
     height: 60px;
     cursor: pointer;
 }
@@ -24,45 +41,38 @@
     font-weight: bold;
 }
 #inputiconright{
-    position:relative;
-    left: 20px;
-    top: 40px;
+   
     color:#0076cd;
 }
 #inputiconleft{
-    position:relative;
-    left: 350px;
-    bottom: 45px;
+
     color: #042d37;
 }
 #tripbooking{
     font-size: 17px;
     color: #042d37;
-    padding-bottom: 30px;
+    // padding-bottom: 30px;
     display: flex;
     font-weight: bold;
 }
-#bookingicon{
-    margin-top: 5px;
-}
+// #bookingicon{
+//     margin-top: 5px;
+// }
 #tripaccount{
     font-size: 25px;
     color: #042d37;
-    padding-bottom: 10px;
+    // padding-bottom: 10px;
 }
 #tripfree{
     font-size: 17px;
     color: #042d37;
-    padding-bottom: 10px;
+    // padding-bottom: 10px;
 }
 #mytripflex{
     display: flex;
     // justify-content: space-between;
 }
-#planeimg{
-    height: 600px;
-    object-fit: cover;
-}
+
 #tripfooterlinks{
     display: flex;
     justify-content: center;
@@ -76,14 +86,11 @@
 
 
 @media(max-width: 900px){
-    #planeimg{
+    #tripimage{
         display: none;
     }
-    #mytriphero{
-        margin: 30px 0px 0px 40px;
-    }
-    #tripfooterlinks a{
-        color: gray;
-        margin-right: 5px;
+
+    #mytriphero {
+        width: 100%;
     }
 }
