--- a/client/src/Pages/Home/Home.scss
+++ b/client/src/Pages/Home/Home.scss
@@ -92,4 +92,12 @@
         justify-content: space-between;
     }
 
+    #tripfuture {
+        bottom: -60px;
+    }
+
+    .tw-SHAKIROH > h2 {
+        font-size: 1.2rem;
+    }
+
 }
