--- a/client/src/Components/Navbar/navbar.scss
+++ b/client/src/Components/Navbar/navbar.scss
@@ -7,6 +7,8 @@
   transition: all 0.5s ease-in-out;
 }
 
+
+
 #hamburger {
   cursor: pointer;
   display: none;
@@ -106,14 +108,36 @@
 #tripinputs {
   display: flex;
 }
+  #footer_nav {
+    display: none;
+  }
+
 
 @media(max-width:768px){
   #hamburger {
     display: block;
   }
-  #navhero{
-    
+  #footer_nav {
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    padding: 20px 20px 5px 20px;
+    z-index: 10;
+    bottom: -1%;
+    background-color: white;
   }
+
+  #footer_nav > .active:hover {
+  //  border-bottom: 3px solid blue;
+    cursor: pointer;
+    background-color:#eaebed;
+    width: 50px;
+
+    }
+
 }
 
 
