--- a/client/src/Components/BookFlightForm/bookfight.scss
+++ b/client/src/Components/BookFlightForm/bookfight.scss
@@ -153,6 +153,10 @@
   }
 }
 
+#not__show{
+  display: none;
+}
+
 /* Media Queries */
 @media (max-width: 768px) {
   .wrapper__form {
@@ -165,5 +169,9 @@
     .margin {
       margin: 0.2rem 0rem;
     }
+  }
+
+  #not__show{
+    display: flex;
   }
 }
